# tdl

./: build.sbt
haskell/: tdl-haskell.cabal
haskell/src/clase1/: Concurrent.hs  Lazy.hs  Lists.hs  Mayor.hs  Mutable.hs  PatternMatchingAbs.hs  PatternMatchingLength.hs  PatternMatchingMax.hs  Tuples.hs  Typeclass.hs
haskell/src/clase2/: LocalScoping.hs  StaticScoping.hs
haskell/src/clase3/: Applicative.hs  Functor.hs  FunctorBind.hs  Merge.hs  MergeSort.hs  Monad.hs  MonadHomemade.hs  Split.hs
haskell/src/clase4/: Concurrencia.hs  ConcurrentMapper.hs  Lazy.hs  LazyGenerate.hs  ProducerConsumerChannel.hs  ProducerConsumerStream.hs
haskell/src/clase5/: CalcServerAsync.hs  CalcServerContinuation.hs  CalcServerSincrono.hs  CalcServerWorkerAsync.hs
haskell/src/clase6/: ADTBundledDeclarativeOpen.hs  ADTBundledDeclarativeSecure.hs  ADTBundledStatefulOpen.hs  ADTBundledStatefulSecure.hs  ADTUnbundledDeclarativeOpen.hs  ADTUnbundledDeclarativeSecure.hs  ADTUnbundledStateMonadOpen.hs  ADTUnbundledStatefulOpen.hs  ADTUnbundledStatefulSecure.hs
scala/: build.sbt
src/main/scala/clase1/: PatternMatching_Abs.scala  Record_CaseClass.scala  Threads_Futures.scala
src/main/scala/clase2/: LocalScoping.scala  StaticScoping.scala
src/main/scala/clase3/: Applicative.scala  Functor.scala  Monad.scala  Split.scala
src/main/scala/clase4/: ConcurrentMapper.scala  ProducerConsumerStream.scala
src/main/scala/clase5/: CalcServerActoresContinuation.scala  CalcServerPreActoresAsync.scala
src/main/scala/clase6/: ADTBundledDeclarativeOpen.scala  ADTBundledStatefulSecure.scala  (+2 more)
(+30 files in other folders)
