name:                 tdl-haskell
version:              0.1.0.0
synopsis:             Teoria del Lenguaje
-- description:
-- license:
-- license-file:
homepage:
author:               Ariel Scarpinelli
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable tdl-haskell
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
